objc2/tests/ui/msg_send_no_return_type.rs
use objc2::{class, msg_send};

fn main() {
    unsafe {
        let cls = class!(NSObject);
        let _obj = msg_send![cls, new];
    }
}
